@@ -30,7 +30,7 @@ WriteMakefile(
 
         # non-trivial dependencies
         'File::Copy::Recursive'                 => '0.38',
-        'Mojolicious'                           => '3.40',
+        'Mojolicious'                           => '4.20',
         'Mojolicious::Plugin::Subdispatch'      => '0.03',
         'Mojolicious::Plugin::RelativeUrlFor'   => '0.02',
         'Text::Markdown'                        => '1.000031',
