@@ -1,5 +1,7 @@
 Revision history for perl module Contenticious
 
+    - changed DOM tests to use attr instead of the deprecated attrs (M. 4.20)
+
 0.332   2012-12-11
 
     - forgot to add the latest M::P::RelativeUrlFor changes to deps - sorry!
